--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <div id="at-risk" class="row py-2 d-none">
   <div class="col-md-12 text-white bg-info p-3">
     <h2>At risk</h2>
-    <p>Your risk score suggests you are at a moderately higher risk of COPD. Perhaps one in five people with your score will have COPD. We recommend you see a doctor so they can give you a more accurate assessment.</p>
+    <p>Your risk score suggests you are at a moderately higher risk of COPD. Perhaps one in five people with your score will have COPD. You might want to see a doctor so they can give you a more accurate assessment.</p>
   </div>
 </div>
 
@@ -67,7 +67,8 @@
   <div class="col-md-5">
     <select id="infections" class="form-control">
       <option></option>
-      <option value="one">Zero or one</option>
+      <option value="zero">Zero</option>
+      <option value="one">One</option>
       <option value="two">Two or more</option>
     </select>
   </div>
